<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Car Dashboard</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="akula_base_url">http://test.com</string>
    <string name="akula_application_identifier">com.dk.cardashboard</string>
    
    <string name="akula_object_car">/data/AkulaSyncByUserRoute/car</string>
    <string name="akula_object_fuel_event">/data/AkulaSyncByUserRoute/fuelevent</string>
    
    <string name="title_AddCarActivity">Add New Car</string>
    <string name="title_AddFuelEventActivity">Add Fuel Event</string>
    <string name="title_CarListActivity">Car List</string>
    <string name="title_FuelEventActivity">Fuel Event List</string>
    
    <string name="label_year">Year:</string>
    <string name="label_make">Make</string>
    <string name="label_model">Model</string>
    <string name="label_date">Date</string>
    <string name="label_gas_price">Gas Price</string>
    <string name="label_gas_amount">Gas Amount</string>
    <string name="label_odometer">Odometer</string>
    <string name="label_primary_vehicle">Primary Vehicle</string>
    <string name="label_average_mpg">Average MPG</string>
    <string name="label_last_mpg">Last MPG</string>
    <string name="label_last_miles_used">Last Total Miles</string>
    
    <string name="hint_year">Enter Year</string>
    <string name="hint_make">Enter Make</string>
    <string name="hint_model">Enter Model</string>
    <string name="hint_date">Enter Date</string>
    <string name="hint_gas_price">Enter Gas Price</string>
    <string name="hint_gas_amount">Enter Gas Amount</string>
    <string name="hint_odometer">Enter Odometer</string>
    
    <string name="button_save">Save</string>
    
    <string name="menu_add_car">Add New Car</string>
    <string name="menu_add_fuel_event">Add Fuel Event</string>
    <string name="menu_car_list">Car List</string>
    <string name="menu_fuel_event_list">Fuel Event List</string>

</resources>
