<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item 
        android:id="@+id/menu_add_car"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/menu_add_car"/>
    
    <item 
        android:id="@+id/menu_add_fuel_event"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/menu_add_fuel_event"/>
    
    <item 
        android:id="@+id/menu_car_list"
        android:orderInCategory="130"
        android:showAsAction="never"
        android:title="@string/menu_car_list"/>
    
    <item 
        android:id="@+id/menu_fuel_event_list"
        android:orderInCategory="140"
        android:showAsAction="never"
        android:title="@string/menu_fuel_event_list"/>

</menu>
